--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "@types/node": "^16.11.10",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11"
+  },
+  "engines": {
+    "node": "^17.0.1"
   }
 }
