--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-markdown": "^7.1.1",
     "theme-ui": "^0.12.1",
     "typescript": "^4.5.2"
   },
