--- a/package.json
+++ b/package.json
@@ -15,30 +15,30 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "framer-motion": "^5.3.3",
-    "gatsby": "^4.2.0",
-    "gatsby-plugin-image": "^2.2.0",
-    "gatsby-plugin-react-helmet": "^5.2.0",
-    "gatsby-plugin-sharp": "^4.2.0",
-    "gatsby-plugin-sitemap": "^5.2.0",
-    "gatsby-plugin-theme-ui": "^0.12.1",
-    "gatsby-plugin-typescript": "^4.2.0",
-    "gatsby-source-datocms": "^3.0.11",
-    "gatsby-source-filesystem": "^4.2.0",
-    "gatsby-transformer-sharp": "^4.2.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "react-markdown": "^7.1.1",
-    "theme-ui": "^0.12.1",
-    "typescript": "^4.5.2"
+    "framer-motion": "5.3.3",
+    "gatsby": "4.2.0",
+    "gatsby-plugin-image": "2.2.0",
+    "gatsby-plugin-react-helmet": "5.2.0",
+    "gatsby-plugin-sharp": "4.2.0",
+    "gatsby-plugin-sitemap": "5.2.0",
+    "gatsby-plugin-theme-ui": "0.12.1",
+    "gatsby-plugin-typescript": "4.2.0",
+    "gatsby-source-datocms": "3.0.11",
+    "gatsby-source-filesystem": "4.2.0",
+    "gatsby-transformer-sharp": "4.2.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-helmet": "6.1.0",
+    "react-markdown": "7.1.1",
+    "theme-ui": "0.12.1",
+    "typescript": "4.5.2"
   },
   "devDependencies": {
-    "@types/node": "^16.11.10",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11"
+    "@types/node": "16.11.10",
+    "@types/react": "17.0.37",
+    "@types/react-dom": "17.0.11"
   },
   "engines": {
-    "node": "^17.1.0"
+    "node": "14.18.2"
   }
 }
